add RAG
