# PodMD.Api/Requests/HowToFixRequest.cs
@@ -1,3 +1,3 @@
 namespace PodMD.Api.Requests;
 
-public record HowToFixRequest(Guid ClusterGuid, string Namespace, string Pod, int? Tail, DateTimeOffset? SinceTime);
+public record HowToFixRequest(string Namespace, string Pod, int? Tail, DateTimeOffset? SinceTime);
