# PodMD.Api/Requests/LinkRagResourceRequest.cs
@@ -1,0 +1,3 @@
+namespace PodMD.Api.Requests;
+
+public record LinkRagResourceRequest(Guid clusterGuid, Guid ragResourceGuid);
