# PodMD.Api/Responses/RagResourceResponse.cs
@@ -1,0 +1,3 @@
+namespace PodMD.Api.Responses;
+
+public record RagResourceResponse(Guid Guid, string Name);
